--- a/Zadacha_1 _versia.ipynb
+++ b/Zadacha_1 _versia.ipynb
@@ -78,9 +78,7 @@
     "    t0[j] = to_kelvin(t0[j])\n",
     "    \n",
     "\n",
-    "pk = 5 * kPa\n",
-    "print(p0)\n",
-    "print(t0)"
+    "pk = 5 * kPa"
    ]
   },
   {
