--- a/Zadacha_1 _versia.ipynb
+++ b/Zadacha_1 _versia.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0fd5fdb1",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,15 @@
     "import iapws\n",
     "from iapws import IAPWS97 as gas\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from typing import Optional, Tuple, List, Union\n",
+    "\n",
+    "point_type = iapws.iapws97.IAPWS97"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ce42d9b2",
    "metadata": {},
    "outputs": [],
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d848bef6",
    "metadata": {},
    "outputs": [],
@@ -60,8 +63,7 @@
     "## Начальные параметры:\n",
     "p0 = [5, 10, 15, 20] \n",
     "def multimpa(number):\n",
-    "    return number*MPa\n",
-    "\n",
+    "    return number * MPa\n",
     "p0 = map(multimpa,p0)\n",
     "\n",
     "t0 = [300, 350, 400, 450, 500]\n",
@@ -76,42 +78,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b38d04d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Определим точки, которые нам нужны\n",
-    "point = []\n",
-    "point_condenser_inlet = []\n",
-    "point_pump_outlet=(gas(P = pk * unit, x = 0))\n",
-    "for j in range(len(p0)):\n",
-    "    for i in range(len(t0)):\n",
-    "        point.append(gas(P = p0[j] * unit, T = t0[i]))\n",
-    "        point_condenser_inlet.append(gas(P = pk * unit, s = point[len(point)-1].s))"
+    "def eff(a,b,c):\n",
+    "    point = []\n",
+    "    point_condenser_inlet = []\n",
+    "    point_pump_outlet=(gas(P = c * unit, x = 0))\n",
+    "    for j in range(len(a)):\n",
+    "        for i in range(len(b)):\n",
+    "            point.append(gas(P = a[j] * unit, T = b[i]))\n",
+    "            point_condenser_inlet.append(gas(P = c * unit, s = point[len(point)-1].s))\n",
+    "    \n",
+    "    useful_energy = []\n",
+    "    full_energy = []\n",
+    "    efficiency = []\n",
+    "    for j in range(len(point)):\n",
+    "        useful_energy.append(point[j].h - point_condenser_inlet[j].h)\n",
+    "        full_energy.append(point[j].h - point_pump_outlet.h)\n",
+    "        efficiency.append(round(useful_energy[j]/full_energy[j]*100,3))\n",
+    "    return efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3dad146b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "efficiency = eff(p0,t0,pk)\n",
+    "efficiency = dict({'5MPa': efficiency[0:5], '10MPa': efficiency[5:10], '15MPa': efficiency[10:15],'20MPa': efficiency[15:20],})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "15d9823a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "useful_energy = []\n",
-    "full_energy = []\n",
-    "efficiency = []\n",
-    "for j in range(len(point)):\n",
-    "    useful_energy.append(point[j].h - point_condenser_inlet[j].h)\n",
-    "    full_energy.append(point[j].h - point_pump_outlet.h)\n",
-    "    efficiency.append(round(useful_energy[j]/full_energy[j]*100,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "3ad655b8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -128,16 +136,24 @@
     "x = t0\n",
     "\n",
     "plt.figure(layout = 'constrained')\n",
-    "plt.plot(x, efficiency[0:5], label = '5 МПа')  \n",
-    "plt.plot(x, efficiency[5:10], label = '10 МПа')  \n",
-    "plt.plot(x, efficiency[10:15], label = '15 МПа')\n",
-    "plt.plot(x, efficiency[15:20], label = '20 МПа')\n",
+    "plt.plot(x, efficiency['5MPa'], label = '5 МПа')  \n",
+    "plt.plot(x, efficiency['10MPa'], label = '10 МПа')  \n",
+    "plt.plot(x, efficiency['15MPa'], label = '15 МПа')\n",
+    "plt.plot(x, efficiency['20MPa'], label = '20 МПа')\n",
     "plt.xlabel('Температура')\n",
     "plt.ylabel('КПД')\n",
     "plt.title(\"Зависимость КПД от температуры при разных значения P0\")\n",
     "plt.legend();\n",
     "plt.grid()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ea661d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
