--- a/Zadacha_1 _versia.ipynb
+++ b/Zadacha_1 _versia.ipynb
@@ -62,55 +62,42 @@
    "source": [
     "## Начальные параметры:\n",
     "p0 = [5, 10, 15, 20] \n",
-    "def multimpa(number):\n",
-    "    return number * MPa\n",
-    "p0 = map(multimpa,p0)\n",
-    "\n",
     "t0 = [300, 350, 400, 450, 500]\n",
-    "\n",
-    "t0 = map(to_kelvin,t0)\n",
-    "   \n",
-    "\n",
+    "t0 = map(to_kelvin,t0)   \n",
     "pk = 5 * kPa\n",
-    "p0 = list(p0)\n",
     "t0 = list(t0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b38d04d2",
+   "id": "f54ce897",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eff(a,b,c):\n",
-    "    point = []\n",
-    "    point_condenser_inlet = []\n",
-    "    point_pump_outlet=(gas(P = c * unit, x = 0))\n",
-    "    for j in range(len(a)):\n",
-    "        for i in range(len(b)):\n",
-    "            point.append(gas(P = a[j] * unit, T = b[i]))\n",
-    "            point_condenser_inlet.append(gas(P = c * unit, s = point[len(point)-1].s))\n",
-    "    \n",
-    "    useful_energy = []\n",
-    "    full_energy = []\n",
-    "    efficiency = []\n",
-    "    for j in range(len(point)):\n",
-    "        useful_energy.append(point[j].h - point_condenser_inlet[j].h)\n",
-    "        full_energy.append(point[j].h - point_pump_outlet.h)\n",
-    "        efficiency.append(round(useful_energy[j]/full_energy[j]*100,3))\n",
+    "def eff(p_0,t_0,p_k):\n",
+    "    p_0 = p_0 * MPa\n",
+    "    point_0 = gas(P=p_0 * unit, T=t_0)\n",
+    "    point_condenser_inlet = gas(P=p_k * unit, s=point_0.s)\n",
+    "    point_pump_outlet = gas(P=p_k * unit, x=0)\n",
+    "    useful_energy = point_0.h - point_condenser_inlet.h\n",
+    "    full_energy = point_0.h - point_pump_outlet.h\n",
+    "    efficiency = round(useful_energy/full_energy*100,3)\n",
     "    return efficiency"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3dad146b",
+   "id": "7f3da085",
    "metadata": {},
    "outputs": [],
    "source": [
-    "efficiency = eff(p0,t0,pk)\n",
-    "efficiency = dict({'5MPa': efficiency[0:5], '10MPa': efficiency[5:10], '15MPa': efficiency[10:15],'20MPa': efficiency[15:20],})"
+    "efficiency = dict({})\n",
+    "for p0value in p0:\n",
+    "    efficiency[p0value]= []\n",
+    "    for t0value in t0:\n",
+    "        efficiency[p0value].append(eff(p0value,t0value,pk))"
    ]
   },
   {
@@ -136,24 +123,16 @@
     "x = t0\n",
     "\n",
     "plt.figure(layout = 'constrained')\n",
-    "plt.plot(x, efficiency['5MPa'], label = '5 МПа')  \n",
-    "plt.plot(x, efficiency['10MPa'], label = '10 МПа')  \n",
-    "plt.plot(x, efficiency['15MPa'], label = '15 МПа')\n",
-    "plt.plot(x, efficiency['20MPa'], label = '20 МПа')\n",
+    "plt.plot(x, efficiency[5], label = '5 МПа')  \n",
+    "plt.plot(x, efficiency[10], label = '10 МПа')  \n",
+    "plt.plot(x, efficiency[15], label = '15 МПа')\n",
+    "plt.plot(x, efficiency[20], label = '20 МПа')\n",
     "plt.xlabel('Температура')\n",
     "plt.ylabel('КПД')\n",
     "plt.title(\"Зависимость КПД от температуры при разных значения P0\")\n",
     "plt.legend();\n",
     "plt.grid()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ea661d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
