исправленно но не работает

--- a/z2_dz2.ipynb
+++ b/z2_dz2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ca1dbdb6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "bb250787",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "05335496",
    "metadata": {},
    "outputs": [
@@ -56,18 +56,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите p_0 \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m p_0 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите p_0 \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m p_0 \u001b[38;5;241m=\u001b[39m p_0 \u001b[38;5;241m*\u001b[39m MPa\n\u001b[0;32m      3\u001b[0m t_0 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mВведите t_0 \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+      "Введите p_0 13\n",
+      "Введите t_0 540\n",
+      "Введите p_k 5\n"
      ]
     }
    ],
@@ -75,13 +66,13 @@
     "p_0 = float(input(\"Введите p_0 \"))\n",
     "p_0 = p_0 * MPa\n",
     "t_0 = float(input(\"Введите t_0 \"))\n",
-    "p_k = (input(\"Введите p_k \"))\n",
+    "p_k = float(input(\"Введите p_k \"))\n",
     "p_k = p_k * kPa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5f93054b",
    "metadata": {},
    "outputs": [],
@@ -122,7 +113,7 @@
     "    return efficiency\n",
     "def solve_exercise(x):\n",
     "    p_middle = x[0]\n",
-    "    p_middle = x[1]\n",
+    "    t_middle = x[1]\n",
     "    point_0_start, point_0_end, point_1_start, point_condenser, point_pump = construct_cycle_points(\n",
     "        p_0=p_0,\n",
     "        p_k=p_k,\n",
@@ -137,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "64857d06",
    "metadata": {
     "scrolled": false
@@ -146,12 +137,12 @@
    "source": [
     "def exp(x):\n",
     "    efficiency = solve_exercise(x)\n",
-    "    return - efficiency"
+    "    return 1- efficiency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "75d0ecb9",
    "metadata": {},
    "outputs": [
@@ -162,7 +153,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([p_0 \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.7\u001b[39m, t_0 \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.7\u001b[39m ])\n\u001b[0;32m      2\u001b[0m bound \u001b[38;5;241m=\u001b[39m ((\u001b[38;5;241m1\u001b[39m, p_0), (\u001b[38;5;241m1\u001b[39m, t_0))\n\u001b[1;32m----> 3\u001b[0m rez \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(minimize(exp,x\u001b[38;5;241m.\u001b[39mall,bounds\u001b[38;5;241m=\u001b[39mbound)\u001b[38;5;241m.\u001b[39mx)\n\u001b[0;32m      4\u001b[0m rez\n",
+      "Cell \u001b[1;32mIn [18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([p_0 \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.7\u001b[39m, t_0 \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.7\u001b[39m ])\n\u001b[0;32m      2\u001b[0m bound \u001b[38;5;241m=\u001b[39m [(\u001b[38;5;241m1\u001b[39m, p_0), (\u001b[38;5;241m1\u001b[39m, t_0)]\n\u001b[1;32m----> 3\u001b[0m rez \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(minimize(exp,x\u001b[38;5;241m.\u001b[39mall,bounds\u001b[38;5;241m=\u001b[39mbound)\u001b[38;5;241m.\u001b[39mx)\n\u001b[0;32m      4\u001b[0m rez\n",
       "File \u001b[1;32m~\\Desktop\\turbines\\turbines_2022\\venv\\lib\\site-packages\\scipy\\optimize\\_minimize.py:684\u001b[0m, in \u001b[0;36mminimize\u001b[1;34m(fun, x0, args, method, jac, hess, hessp, bounds, constraints, tol, callback, options)\u001b[0m\n\u001b[0;32m    680\u001b[0m                 \u001b[38;5;28;01mif\u001b[39;00m callable(con\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjac\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)):\n\u001b[0;32m    681\u001b[0m                     con[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjac\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m _remove_from_func(con[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjac\u001b[39m\u001b[38;5;124m'\u001b[39m], i_fixed,\n\u001b[0;32m    682\u001b[0m                                                    x_fixed, min_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m    683\u001b[0m                                                    remove\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 684\u001b[0m     bounds \u001b[38;5;241m=\u001b[39m \u001b[43mstandardize_bounds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbounds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeth\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    686\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m meth \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnelder-mead\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    687\u001b[0m     res \u001b[38;5;241m=\u001b[39m _minimize_neldermead(fun, x0, args, callback, bounds\u001b[38;5;241m=\u001b[39mbounds,\n\u001b[0;32m    688\u001b[0m                                \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n",
       "File \u001b[1;32m~\\Desktop\\turbines\\turbines_2022\\venv\\lib\\site-packages\\scipy\\optimize\\_minimize.py:947\u001b[0m, in \u001b[0;36mstandardize_bounds\u001b[1;34m(bounds, x0, meth)\u001b[0m\n\u001b[0;32m    945\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m meth \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml-bfgs-b\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtnc\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mslsqp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mold\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m    946\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(bounds, Bounds):\n\u001b[1;32m--> 947\u001b[0m         bounds \u001b[38;5;241m=\u001b[39m \u001b[43mnew_bounds_to_old\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbounds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbounds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mub\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    948\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m bounds\n",
       "File \u001b[1;32m~\\Desktop\\turbines\\turbines_2022\\venv\\lib\\site-packages\\scipy\\optimize\\_constraints.py:397\u001b[0m, in \u001b[0;36mnew_bounds_to_old\u001b[1;34m(lb, ub, n)\u001b[0m\n\u001b[0;32m    388\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnew_bounds_to_old\u001b[39m(lb, ub, n):\n\u001b[0;32m    389\u001b[0m     \u001b[38;5;124;03m\"\"\"Convert the new bounds representation to the old one.\u001b[39;00m\n\u001b[0;32m    390\u001b[0m \n\u001b[0;32m    391\u001b[0m \u001b[38;5;124;03m    The new representation is a tuple (lb, ub) and the old one is a list\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    395\u001b[0m \u001b[38;5;124;03m    None.\u001b[39;00m\n\u001b[0;32m    396\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 397\u001b[0m     lb \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    398\u001b[0m     ub \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mbroadcast_to(ub, n)\n\u001b[0;32m    400\u001b[0m     lb \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mfloat\u001b[39m(x) \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39minf \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m lb]\n",
@@ -175,7 +166,7 @@
    ],
    "source": [
     "x = np.array([p_0 * 0.7, t_0 * 0.7 ])\n",
-    "bound = ((1, p_0), (1, t_0))\n",
+    "bound = [(1, p_0), (1, t_0)]\n",
     "rez = float(minimize(exp,x.all,bounds=bound).x)\n",
     "rez"
    ]
