--- a/z2_dz2.ipynb
+++ b/z2_dz2.ipynb
@@ -43,129 +43,82 @@
     "MPa = 10 ** 6\n",
     "kPa = 10 ** 3\n",
     "unit = 1 / MPa\n",
-    "to_kelvin = lambda x: x + 273.15 if x else None"
+    "to_kelvin = lambda x: x + 273.15 if x else None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "05335496",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите p_0 13\n",
-      "Введите t_0 540\n",
-      "Введите p_k 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "p_0 = float(input(\"Введите p_0 \"))\n",
-    "p_0 = p_0 * MPa\n",
-    "t_0 = float(input(\"Введите t_0 \"))\n",
-    "\n",
-    "p_k = float(input(\"Введите p_k \"))\n",
-    "p_k = p_k * kPa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "5f93054b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_is_valid_numerical(values: List[Union[None, float]]) -> None:\n",
-    "    for value in values:\n",
-    "        if value:\n",
-    "            if not isinstance(value, (int, float)):\n",
-    "                raise ValueError(f\"Argument should be int or float value! Given {type(value)}\")\n",
-    "def construct_cycle_points(\n",
-    "    p_0: Union[int, float],\n",
-    "    p_k: Union[int, float],\n",
-    "    p_middle: Union[int, float],\n",
-    "    t_0: Optional[Union[int, float]] = None,\n",
-    "    t_middle: Optional[Union[int, float]] = None,\n",
-    "    x_0: Optional[Union[int, float]] = None,\n",
-    ") -> Tuple[point_type, point_type, point_type]:\n",
-    "    check_is_valid_numerical([p_0, p_k, p_middle, t_0, t_middle, x_0])\n",
-    "    if not t_0 and not x_0:\n",
-    "        raise ValueError(\"Neither t_0 not x_0 is not provided for start expansion point!\")\n",
-    "    if not (p_0 and p_k):\n",
-    "        raise ValueError(\"P_0 and p_k must be specified!\")\n",
-    "    if x_0 and (x_0 > 1 or x_0 < 0):\n",
-    "        raise ValueError(\"x_0 should be between 0 and 1\")\n",
-    "        \n",
+    "def efficiency(middle_point):\n",
+    "    p_middle = middle_point[0]\n",
+    "    t_middle = middle_point[1]\n",
     "    point_0_start = gas(P=p_0 * unit, T=t_0)\n",
     "    point_0_end = gas(P=p_middle * unit, s=point_0_start.s)\n",
     "    point_1_start = gas(P=p_middle * unit, T=t_middle)\n",
     "    point_condenser = gas(P=p_k * unit, s=point_1_start.s)\n",
     "    point_pump = gas(P=p_k * unit, x=0)\n",
-    "    \n",
-    "    return point_0_start, point_0_end, point_1_start, point_condenser, point_pump\n",
-    "\n",
-    "def compute_cycle_efficiency(point_0_start: point_type, point_0_end: point_type, point_1_start: point_type, point_condenser: point_type, point_pump: point_type) -> float:\n",
     "    useful_energy = (point_0_start.h - point_0_end.h) + (point_1_start.h - point_condenser.h)\n",
     "    full_energy = (point_0_start.h - point_pump.h) + (point_1_start.h - point_0_end.h)\n",
-    "    efficiency = round(useful_energy/full_energy*100,3)\n",
-    "    return efficiency\n",
-    "def solve_exercise(x):\n",
-    "    p_middle = x[0]\n",
-    "    t_middle = x[1]\n",
-    "    point_0_start, point_0_end, point_1_start, point_condenser, point_pump = construct_cycle_points(\n",
-    "        p_0=p_0,\n",
-    "        p_k=p_k,\n",
-    "        p_middle=p_middle,\n",
-    "        t_0=to_kelvin(t_0),\n",
-    "        t_middle=to_kelvin(t_middle),\n",
-    "    ) \n",
-    "    efficiency = compute_cycle_efficiency(point_0_start=point_0_start, point_0_end=point_0_end, point_1_start=point_1_start, point_condenser=point_condenser, point_pump=point_pump)\n",
-    "    return efficiency"
+    "    efficiency = useful_energy / full_energy\n",
+    "    return 1 - efficiency\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "64857d06",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "def exp(x):\n",
-    "    efficiency = solve_exercise(x)\n",
-    "    return 1- efficiency"
+    "def point(p_0,t_0,p_k):\n",
+    "    middle_point = np.array([p_0 * 0.7, t_0 * 0.7 ])\n",
+    "    bound = [(1, p_0), (1, t_0)]\n",
+    "    rezul = (minimize(efficiency,middle_point,bounds=bound).x)\n",
+    "    return rezul"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "75d0ecb9",
+   "execution_count": 26,
+   "id": "2cac92ae",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Давление промперегрева 9.1 MPa Температура промперегрева 378.0 Градусов цельсия\n"
+      "Введите p_0 10\n",
+      "Введите t_0 500\n",
+      "Введите p_k 5\n",
+      "Давление промперегрева 7.0 MPa\n",
+      "Температура промперегрева 500.0 К\n"
      ]
     }
    ],
    "source": [
-    "x = np.array([p_0 * 0.7, t_0 * 0.7 ])\n",
-    "bound = [(1, p_0), (1, t_0)]\n",
-    "rez = (minimize(exp,x,bounds=bound).x)\n",
-    "rez =list(rez)\n",
-    "print(\"Давление промперегрева\", rez[0]* unit, \"MPa\" ,\"Температура промперегрева\",rez[1],\"Градусов цельсия\",)"
+    "p_0 = float(input(\"Введите p_0 \"))\n",
+    "p_0 = p_0 * MPa\n",
+    "t_0 = float(input(\"Введите t_0 \")) \n",
+    "p_k = float(input(\"Введите p_k \"))\n",
+    "p_k = p_k * kPa\n",
+    "rez = (point(p_0,t_0,p_k))\n",
+    "p_middle = round(rez[0] * unit,3)\n",
+    "t_middle = rez[1]\n",
+    "print(\"Давление промперегрева\",p_middle,\"MPa\")\n",
+    "print(\"Температура промперегрева\",t_middle,\"К\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cac92ae",
+   "id": "34b169fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8cdf70",
+   "id": "55aebaf5",
    "metadata": {},
    "outputs": [],
    "source": []
