--- a/z1_dz2.ipynb
+++ b/z1_dz2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "6697ca08",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "aec52cf0",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "45917654",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "8acacca8",
    "metadata": {},
    "outputs": [],
@@ -105,8 +105,8 @@
     "    p_0: Union[int, float],\n",
     "    p_k: Union[int, float],\n",
     "    p_middle: Union[int, float],\n",
-    "    t_0: Optional[Union[int, float]] = None,\n",
-    "    t_middle: Optional[Union[int, float]] = None,\n",
+    "    t_0: Optional[Union[int, float]],\n",
+    "    t_middle: Optional[Union[int, float]],\n",
     "    x_0: Optional[Union[int, float]] = None,) -> float:\n",
     "    point_0_start, point_0_end, point_1_start, point_condenser, point_pump = construct_cycle_points(\n",
     "        p_0=p_0,\n",
@@ -124,31 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "bb3d8d6c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[44.786, 45.17, 45.222, 45.16, 45.043, 44.897]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "efficiency = []\n",
     "for pm_value in p_middle:\n",
-    "    efficiency.append(solve_exercise(p_0=p_0, p_k=p_k, p_middle = pm_value * MPa, t_0 = t_0 , t_middle = t_middle))\n",
-    "efficiency"
+    "    efficiency.append(solve_exercise(p_0=p_0, p_k=p_k, p_middle = pm_value * MPa, t_0 = t_0 , t_middle = t_middle))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "74c6587f",
    "metadata": {},
    "outputs": [
