--- a/z1_dz4.ipynb
+++ b/z1_dz4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "e867a884",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "671dcabf",
    "metadata": {},
    "outputs": [],
@@ -86,12 +86,12 @@
     "\n",
     "# По графику mu = f(зазор / толщина усика) определим при delta_r_bandage / 0.004 ~ 0.3.\n",
     "# Возьмем квадратное уплотнение\n",
-    "mu_r = 0.8\n"
+    "mu_r = 0.8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b3dc9c49",
    "metadata": {},
    "outputs": [],
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3559c3fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_friction_loss_pu(s_div_r, d_r, u, kinematic_viscosity, u_div_dummy_speed, F1):\n",
-    "    def get_Re_numbeer(u,d_r):\n",
+    "    def get_Re_numbeer(u, d_r):\n",
     "        return  u * d_r * 0.5 / kinematic_viscosity\n",
     "\n",
     "    \n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c672a557",
    "metadata": {},
    "outputs": [],
@@ -136,23 +136,23 @@
     "        third = u_div_dummy_speed ** 3\n",
     "        return first * second * third * m\n",
     "    ventilation_loss_pu = get_ventilation_loss_pu(\n",
-    "    m=1,\n",
-    "    k=0.065,\n",
-    "    e=e,\n",
-    "    u_div_dummy_speed=u_div_dummy_speed,\n",
-    "    sin=sin_alpha_1\n",
+    "    m = 1,\n",
+    "    k = 0.065,\n",
+    "    e = e,\n",
+    "    u_div_dummy_speed = u_div_dummy_speed,\n",
+    "    sin = sin_alpha_1\n",
     "    )\n",
     "    def get_segment_loss_pu(B, l, F, u_div_dummy_speed, blade_efficiency, segments):\n",
     "        first = 0.25 * B * l / F\n",
     "        second = u_div_dummy_speed * blade_efficiency * segments\n",
     "        return first * second\n",
     "    segment_loss_pu = get_segment_loss_pu(\n",
-    "    B=blade_width,\n",
-    "    l=blade_length,\n",
-    "    F=F1,\n",
-    "    u_div_dummy_speed=u_div_dummy_speed,\n",
-    "    blade_efficiency=blade_efficiency,\n",
-    "    segments=segments\n",
+    "    B = blade_width,\n",
+    "    l = blade_length,\n",
+    "    F = F1,\n",
+    "    u_div_dummy_speed = u_div_dummy_speed,\n",
+    "    blade_efficiency = blade_efficiency,\n",
+    "    segments = segments\n",
     "    )\n",
     "    \n",
     "    partial_losses_pu = segment_loss_pu + ventilation_loss_pu\n",
@@ -161,22 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "efd0d581",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_leak_losses_pu(z_bandage,delta_r_bandage, mu_r_rotor, delta_a_bandage, z_rotor, mu_a, mu_nozzle, F1, degree__of_reaction, blade_length, delta_leak_rotor,d_leak_rotor, blade_efficiency,K_y):\n",
+    "def get_leak_losses_pu(z_bandage, delta_r_bandage, mu_r_rotor, delta_a_bandage, z_rotor, mu_a, mu_nozzle, F1, degree__of_reaction, blade_length, delta_leak_rotor, d_leak_rotor, blade_efficiency, K_y):\n",
+    "    \n",
     "    def compute_equal_gap(z, delta_r, mu_r_rotor, delta_a, mu_a):\n",
     "        first = 1 / (mu_a * delta_a) ** 2\n",
     "        second = z / (mu_r_rotor * delta_r) ** 2\n",
     "        return (first + second) ** (-0.5)\n",
+    "    \n",
     "    def get_bandage_leak_loss_pu(d_shroud, delta_eq, F, dor, l, efficiency):\n",
     "        d_avg = d_shroud - l\n",
     "        first = math.pi * d_shroud * delta_eq / F\n",
     "        second = dor + 1.8 * (l / d_avg)\n",
     "        return first * (second) ** 0.5 * efficiency\n",
-    "    \n",
     "    \n",
     "    def get_disk_leak_loss_pu(K, F, mu_r_rotor, mu_nozzle, F_nozzle, z, efficiency):\n",
     "        upper = mu_r_rotor * K * F * efficiency\n",
@@ -184,15 +185,21 @@
     "        return upper / lower\n",
     "    \n",
     "    d_shroud = delta_r_bandage / 0.001 # По определению задачи\n",
-    "    delta_eq_bandage = compute_equal_gap(z_bandage, delta_r_bandage, mu_r_rotor, delta_a_bandage, mu_a)\n",
+    "    delta_eq_bandage = compute_equal_gap(\n",
+    "        z = z_bandage,\n",
+    "        delta_r = delta_r_bandage,\n",
+    "        mu_r_rotor = mu_r_rotor,\n",
+    "        delta_a = delta_a_bandage,\n",
+    "        mu_a = mu_a\n",
+    "    )\n",
     "\n",
     "    bandage_leak_loss_pu = get_bandage_leak_loss_pu(\n",
-    "        d_shroud=d_shroud,\n",
-    "        delta_eq=delta_eq_bandage,\n",
-    "        F=F1,\n",
-    "        dor=degree__of_reaction,\n",
-    "        l=blade_length,\n",
-    "        efficiency=blade_efficiency\n",
+    "        d_shroud = d_shroud,\n",
+    "        delta_eq = delta_eq_bandage,\n",
+    "        F = F1,\n",
+    "        dor = degree__of_reaction,\n",
+    "        l = blade_length,\n",
+    "        efficiency = blade_efficiency\n",
     "        )\n",
     "        \n",
     "    F_leak_rotor = math.pi * d_leak_rotor * delta_leak_rotor\n",
@@ -201,10 +208,10 @@
     "        K = K_y,\n",
     "        F = F_leak_rotor,\n",
     "        mu_r_rotor = mu_r_rotor,\n",
-    "        mu_nozzle=mu_nozzle,\n",
-    "        F_nozzle=F1,\n",
-    "        z=z_rotor,\n",
-    "        efficiency=blade_efficiency\n",
+    "        mu_nozzle = mu_nozzle,\n",
+    "        F_nozzle = F1,\n",
+    "        z = z_rotor,\n",
+    "        efficiency = blade_efficiency\n",
     "    )\n",
     "    \n",
     "    leak_losses_pu = disk_leak_loss_pu + bandage_leak_loss_pu\n",
@@ -213,37 +220,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "3ff64f86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_internal_efficiency(blade_efficiency,friction_loss_pu,partial_losses_pu,leak_losses_pu):\n",
+    "def get_internal_efficiency(blade_efficiency, friction_loss_pu, partial_losses_pu, leak_losses_pu):\n",
     "    internal_efficiency = blade_efficiency - friction_loss_pu - partial_losses_pu - leak_losses_pu\n",
     "    return internal_efficiency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "a48abaa8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "leak_losses_pu = get_leak_losses_pu(z_bandage,delta_r_bandage, mu_r_rotor, delta_a_bandage, z_rotor, mu_a, mu_nozzle, F1, degree__of_reaction, blade_length, delta_leak_rotor,d_leak_rotor, blade_efficiency,K_y)\n",
+    "leak_losses_pu = get_leak_losses_pu(\n",
+    "    z_bandage = z_bandage,\n",
+    "    delta_r_bandage = delta_r_bandage,\n",
+    "    mu_r_rotor = mu_r_rotor,\n",
+    "    delta_a_bandage = delta_a_bandage,\n",
+    "    z_rotor = z_rotor,\n",
+    "    mu_a = mu_a,\n",
+    "    mu_nozzle = mu_nozzle,\n",
+    "    F1 = F1,\n",
+    "    degree__of_reaction = degree__of_reaction,\n",
+    "    blade_length = blade_length,\n",
+    "    delta_leak_rotor = delta_leak_rotor,\n",
+    "    d_leak_rotor  = d_leak_rotor,\n",
+    "    blade_efficiency = blade_efficiency,\n",
+    "    K_y = K_y\n",
+    ")\n",
+    "\n",
     "internal_efficiency = []\n",
     "for H_0value in H_0:\n",
     "    H_0value=H_0value*1000\n",
     "    dummy_speed = (2 * H_0value) ** 0.5\n",
     "    u_div_dummy_speed = u / dummy_speed\n",
-    "    friction_loss_pu = get_friction_loss_pu(s_div_r, d_r, u, kinematic_viscosity, u_div_dummy_speed, F1)\n",
-    "    partial_losses_pu = get_partial_losses_pu(u_div_dummy_speed, blade_width, blade_length, F1, blade_efficiency, segments)\n",
+    "    \n",
+    "    friction_loss_pu = get_friction_loss_pu(\n",
+    "        s_div_r = s_div_r,\n",
+    "        d_r = d_r, \n",
+    "        u = u,\n",
+    "        kinematic_viscosity = kinematic_viscosity,\n",
+    "        u_div_dummy_speed = u_div_dummy_speed,\n",
+    "        F1 = F1\n",
+    "    )\n",
+    "    \n",
+    "    partial_losses_pu = get_partial_losses_pu(\n",
+    "        u_div_dummy_speed = u_div_dummy_speed,\n",
+    "        blade_width = blade_width,\n",
+    "        blade_length = blade_length,\n",
+    "        F1 = F1,\n",
+    "        blade_efficiency = blade_efficiency,\n",
+    "        segments = segments\n",
+    "    )\n",
     "    internal_efficiency.append(get_internal_efficiency(blade_efficiency,friction_loss_pu,partial_losses_pu,leak_losses_pu))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "e0b05e83",
    "metadata": {},
    "outputs": [
@@ -268,6 +307,14 @@
     "plt.title(\"Зависимость $\\eta_{oi}$ от значения H_0\")\n",
     "plt.grid()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d846148",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
