--- a/z1_dz4.ipynb
+++ b/z1_dz4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e867a884",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "671dcabf",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b3dc9c49",
    "metadata": {},
    "outputs": [],
@@ -102,18 +102,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "id": "4eb64e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  def get_Re_numbeer(u, d_r):\n",
+    "        return  u * d_r * 0.5 / kinematic_viscosity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "65ce5225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def get_k_frictions(s_div_r, re):\n",
+    "        return 2.5 * 10 ** (-2) * s_div_r ** 0.1 * re **(-0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "3559c3fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_friction_loss_pu(s_div_r, d_r, u, kinematic_viscosity, u_div_dummy_speed, F1):\n",
-    "    def get_Re_numbeer(u, d_r):\n",
-    "        return  u * d_r * 0.5 / kinematic_viscosity\n",
-    "\n",
-    "    \n",
-    "    def get_k_frictions(s_div_r, re):\n",
-    "        return 2.5 * 10 ** (-2) * s_div_r ** 0.1 * re **(-0.2)\n",
     "    \n",
     "    Re_number = get_Re_numbeer(u,d_r)\n",
     "    k = get_k_frictions(s_div_r, Re_number)\n",
@@ -124,17 +140,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "id": "8c40fa44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_ventilation_loss_pu(m, k, sin, e, u_div_dummy_speed):\n",
+    "    first = k / sin\n",
+    "    second = (1 - e) / e\n",
+    "    third = u_div_dummy_speed ** 3\n",
+    "    return first * second * third * m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a714830a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_segment_loss_pu(B, l, F, u_div_dummy_speed, blade_efficiency, segments):\n",
+    "    first = 0.25 * B * l / F\n",
+    "    second = u_div_dummy_speed * blade_efficiency * segments\n",
+    "    return first * second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c672a557",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_partial_losses_pu(u_div_dummy_speed, blade_width, blade_length, F1, blade_efficiency, segments):\n",
-    "    def get_ventilation_loss_pu(m, k, sin, e, u_div_dummy_speed):\n",
-    "        first = k / sin\n",
-    "        second = (1 - e) / e\n",
-    "        third = u_div_dummy_speed ** 3\n",
-    "        return first * second * third * m\n",
+    "    \n",
     "    ventilation_loss_pu = get_ventilation_loss_pu(\n",
     "    m = 1,\n",
     "    k = 0.065,\n",
@@ -142,10 +181,7 @@
     "    u_div_dummy_speed = u_div_dummy_speed,\n",
     "    sin = sin_alpha_1\n",
     "    )\n",
-    "    def get_segment_loss_pu(B, l, F, u_div_dummy_speed, blade_efficiency, segments):\n",
-    "        first = 0.25 * B * l / F\n",
-    "        second = u_div_dummy_speed * blade_efficiency * segments\n",
-    "        return first * second\n",
+    "    \n",
     "    segment_loss_pu = get_segment_loss_pu(\n",
     "    B = blade_width,\n",
     "    l = blade_length,\n",
@@ -161,28 +197,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
+   "id": "9e709a2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_equal_gap(z, delta_r, mu_r_rotor, delta_a, mu_a):\n",
+    "    first = 1 / (mu_a * delta_a) ** 2\n",
+    "    second = z / (mu_r_rotor * delta_r) ** 2\n",
+    "    return (first + second) ** (-0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5361311b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bandage_leak_loss_pu(d_shroud, delta_eq, F, dor, l, efficiency):\n",
+    "    d_avg = d_shroud - l\n",
+    "    first = math.pi * d_shroud * delta_eq / F\n",
+    "    second = dor + 1.8 * (l / d_avg)\n",
+    "    return first * (second) ** 0.5 * efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7e435c93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_disk_leak_loss_pu(K, F, mu_r_rotor, mu_nozzle, F_nozzle, z, efficiency):\n",
+    "    upper = mu_r_rotor * K * F * efficiency\n",
+    "    lower = mu_nozzle * F_nozzle * z ** 0.5\n",
+    "    return upper / lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "efd0d581",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_leak_losses_pu(z_bandage, delta_r_bandage, mu_r_rotor, delta_a_bandage, z_rotor, mu_a, mu_nozzle, F1, degree__of_reaction, blade_length, delta_leak_rotor, d_leak_rotor, blade_efficiency, K_y):\n",
-    "    \n",
-    "    def compute_equal_gap(z, delta_r, mu_r_rotor, delta_a, mu_a):\n",
-    "        first = 1 / (mu_a * delta_a) ** 2\n",
-    "        second = z / (mu_r_rotor * delta_r) ** 2\n",
-    "        return (first + second) ** (-0.5)\n",
-    "    \n",
-    "    def get_bandage_leak_loss_pu(d_shroud, delta_eq, F, dor, l, efficiency):\n",
-    "        d_avg = d_shroud - l\n",
-    "        first = math.pi * d_shroud * delta_eq / F\n",
-    "        second = dor + 1.8 * (l / d_avg)\n",
-    "        return first * (second) ** 0.5 * efficiency\n",
-    "    \n",
-    "    def get_disk_leak_loss_pu(K, F, mu_r_rotor, mu_nozzle, F_nozzle, z, efficiency):\n",
-    "        upper = mu_r_rotor * K * F * efficiency\n",
-    "        lower = mu_nozzle * F_nozzle * z ** 0.5\n",
-    "        return upper / lower\n",
     "    \n",
     "    d_shroud = delta_r_bandage / 0.001 # По определению задачи\n",
     "    delta_eq_bandage = compute_equal_gap(\n",
@@ -220,20 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "3ff64f86",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_internal_efficiency(blade_efficiency, friction_loss_pu, partial_losses_pu, leak_losses_pu):\n",
+    "    \n",
     "    internal_efficiency = blade_efficiency - friction_loss_pu - partial_losses_pu - leak_losses_pu\n",
+    "    \n",
     "    return internal_efficiency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "a48abaa8",
+   "execution_count": 16,
+   "id": "65cb66f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,8 +314,16 @@
     "    d_leak_rotor  = d_leak_rotor,\n",
     "    blade_efficiency = blade_efficiency,\n",
     "    K_y = K_y\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a48abaa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "internal_efficiency = []\n",
     "for H_0value in H_0:\n",
     "    H_0value=H_0value*1000\n",
@@ -282,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "e0b05e83",
    "metadata": {},
    "outputs": [
